--- a/package.json
+++ b/package.json
@@ -4,25 +4,27 @@
   "description": "TSL Plant Transformation",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "latest",
+    "cookie-parser": "latest",
     "ejs": "^2.5.2",
     "email-templates": "^2.5.4",
+    "express": "latest",
+    "express-flash": "latest",
     "express-session": "^1.14.2",
-    "gulp": "^3.9.1",
     "gravatar": "^1.6.0",
+    "gulp": "^3.9.1",
     "less-middleware": "^2.2.0",
+    "multer": "^0.1.8",
     "nodemailer": "^2.6.4",
     "nodemailer-smtp-transport": "^2.7.2",
-    "passport-ldapauth": "^0.5.0",
-    "thinky": "^2.3.8",
-    "multer": "latest",
-    "body-parser": "latest",
-    "express": "latest",
-    "session-rethinkdb": "latest",
     "passport": "latest",
-    "cookie-parser": "latest",
-    "express-flash": "latest"
+    "passport-ldapauth": "^0.5.0",
+    "session-rethinkdb": "latest",
+    "thinky": "^2.3.8"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "gulp-babel": "^6.1.2",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0"
