--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "nodemailer-smtp-transport": "^2.7.2",
     "passport": "latest",
     "passport-ldapauth": "^0.5.0",
-    "react-datepicker": "^0.37.0",
     "session-rethinkdb": "latest",
     "thinky": "^2.3.8"
   },
@@ -28,14 +27,16 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.26.1",
+    "dragula": "^3.7.2",
     "gulp-babel": "^6.1.2",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0",
     "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-select": "^1.0.0-rc.2",
     "react-textarea-autosize": "^4.0.5",
-    "react-typeahead": "latest",
+    "react-tokeninput": "^2.2.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-stream": "^3.2.0"
