--- a/config.json
+++ b/config.json
@@ -21,5 +21,11 @@
   },
   "admins": [
     "pagem"
+  ],
+  "groupLeaders": [
+    {
+      "username": "macleand",
+      "name": "Dan MacLean"
+    }
   ]
 }
