pre version updates

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "passport-ldapauth": "^0.5.0",
     "session-rethinkdb": "latest",
     "thinky": "^2.3.8",
-    "xml2js": "^0.4.17"
+    "xml2js": "^0.4.17",
+    "request": "latest"
   },
   "devDependencies": {
     "babel-loader": "^6.2.8",
