--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "simple-line-icons": "^2.4.1",
     "jquery": "^3.1.1",
-    "normalize-css": "^5.0.0"
+    "normalize-css": "^5.0.0",
+    "vis": "^4.18.0"
   }
 }
