--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "simple-line-icons": "^2.4.1",
     "jquery": "^3.1.1",
     "normalize-css": "^5.0.0",
-    "vis": "^4.18.0"
+    "vis": "^4.18.0",
+    "sweetalert": "^1.1.3"
   }
 }
