--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/TeamMacLean/transplant#readme",
   "dependencies": {
+    "activedirectory": "latest",
     "body-parser": "latest",
     "cookie-parser": "latest",
     "ejs": "^2.5.5",
@@ -29,10 +30,10 @@
     "express": "latest",
     "express-flash": "latest",
     "express-session": "^1.14.2",
-    "gravatar": "^1.6.0",
+    "fsevents": "^1.2.7",
+    "gravatar": "^1.8.2",
     "gulp": "^3.9.1",
     "less-middleware": "^2.2.0",
-    "moment": "^2.17.1",
     "multer": "^0.1.8",
     "nodemailer": "^2.6.4",
     "nodemailer-smtp-transport": "^2.7.2",
@@ -42,24 +43,23 @@
     "session-rethinkdb": "latest",
     "shortid": "^2.2.8",
     "thinky": "^2.3.8",
-    "xml2js": "^0.4.17",
-    "activedirectory": "latest"
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
-    "css-loader": "^0.26.1",
-    "dragula": "^3.7.2",
-    "react-select": "^1.0.0-rc.2",
-    "react-textarea-autosize": "^4.0.5",
-    "style-loader": "^0.13.1",
-    "tether-shepherd": "^1.8.1",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
-    "moment": "^2.18.1",
+    "css-loader": "^0.26.1",
+    "dragula": "^3.7.2",
+    "moment": "^2.29.4",
     "prepack-webpack-plugin": "^1.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-select": "^1.0.0-rc.2",
+    "react-textarea-autosize": "^4.0.5",
+    "style-loader": "^0.13.1",
+    "tether-shepherd": "^1.8.1",
     "webpack": "^2.3.2"
   }
 }
